# Lokalapp

./: README.md
backend/: lokal.db  pyproject.toml
backend-cloudflare/: README.md  package-lock.json  package.json  pyproject.toml  schema.sql  wrangler.toml
backend-cloudflare/migrations/: 0001_initial.sql  0002_seed.sql  0003_extras.sql  0004_remote_align.sql  0005_idempotency.sql  0006_security.sql  0007_office_collector.sql
backend-cloudflare/src/: entry.py  worker.js
backend-cloudflare/src/handlers/: admin.js  agents.js  auth.js  billing.js  households.js  notifications.js  offices.js  products.js  settlements.js  support.js  tariffs.js  users.js  wallet.js
backend-cloudflare/src/lib/: audit.js  auth.js  billing.js  db.js  http.js  idempotency.js  ids.js  notify.js  push.js  ratelimit.js
backend/app/: config.py  database.py  main.py
backend/app/models/: __init__.py  agent.py  electricity.py  transaction.py  user.py  wallet.py  wifi_voucher.py
backend/app/routers/: __init__.py  admin.py  agent.py  auth.py  electricity.py  settings.py  users.py  wallet.py  wifi.py
backend/app/schemas/: __init__.py  agent.py  auth.py  electricity.py  user.py  wallet.py  wifi.py
backend/app/services/: __init__.py  auth.py  seed_data.py
backend/app/utils/: __init__.py  security.py
frontend/: .env  .env.example  index.html  package-lock.json  package.json  tailwind.config.js
frontend/public/: manifest.json  sw.js
frontend/src/: App.tsx  index.css
frontend/src/components/: AppShell.tsx  InstallPrompt.tsx  Logo.tsx  PageHeader.tsx  Stat.tsx
(+52 files in other folders)
